# 44733

./: LICENSE  README.md  eslint.config.js  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.cjs  tsconfig.node.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: release.yml  run.yml
netlify/functions/number/: Cargo.toml
netlify/functions/number/src/: consts.rs  main.rs
public/: 44733
public/data/: 44733.json
src/: App.vue
src/components/: Loading.vue  LoadingCircle.vue  LocationItem.vue  LocationList.vue  NavBar.vue  Phone.vue  PhoneIcon.vue  PrimosAdri.vue  Stats.vue  StatsPanel.vue  Tabs.vue
src/model/: Location.ts
src/router/: index.ts
src/utils/: parser.ts  utils.ts
src/views/: HomeView.vue
