[package]
edition = "2021"
name = "number"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.15.1"
http = "1.1.0"
lambda_runtime = "0.12.0"
log = "0.4.17"
simple_logger = "5.0.0"
tokio = "1.26.0"
lottery = { git = "https://github.com/jiep/lottery.git", version = "0.3.2" }
